--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "axios": "^1.3.2",
-    "cohere-ai": "^5.0.2"
+    "cohere-ai": "^5.0.2",
+    "svelte-loading-spinners": "^0.3.4"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
